FIXED: BurgerMenu visible, Navigation

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,15 +4,10 @@
   left: 0;
   z-index: 99;
   width: 100%;
-  overflow: auto;
 
   -webkit-box-shadow: 0px 5px 8px -5px rgba(34, 60, 80, 0.3);
   -moz-box-shadow: 0px 5px 8px -5px rgba(34, 60, 80, 0.3);
   box-shadow: 0px 5px 8px -5px rgba(34, 60, 80, 0.3);
-}
-
-._navigation-opened {
-  height: 100%;
 }
 
 .header__container {
