--- a/src/components/MenuBurger/MenuBurger.css
+++ b/src/components/MenuBurger/MenuBurger.css
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
 
 .menu-burger__item {
