--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,5 +1,5 @@
 .movies {
-  margin-top: 74px;
+  padding-top: 74px;
   padding-left: 10px;
   padding-right: 10px;
 }
